--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div> -->
 
                 <div class="home__info-img">
-                    <h1>Testeur Logiciel </h1>
+                    <h1>Testeur Logiciel </br> Développeur Web</h1>
                     <h2 class="title_h2">Yannick Kabasele</h2>
                     <div>
                         <a href="#apropos" class="button">EN SAVOIR PLUS</a>
@@ -149,8 +149,8 @@
                         <div class="apropos__stats-infos">
                             <p>01 Projet Séquentiel V</p>
                             <p>01 Projet Agile</p>
-                            <p>05 Développements web</p>
-                            <p>76 Intégrations web</p>
+                            <p>05 Projets Dév Web</p>
+                            <p>76 Intégrations Web</p>
                             <!-- <p>2 ans d'expérience</p> -->
                         </div>
                     </div>
@@ -208,9 +208,9 @@
                 <div class="services__content">
                     <!-- <h3 class="services__title">Intégration <br> web</h3> -->
                     <ul class="services__list grid">
+                        <li>Conception et développement d'applications web et mobile</li>
                         <li>Etude et analyse des spécifications fonctionnelles</li>
                         <li>Participation à la réalisation du plan de test</li>
-                        <li>Conception, exécution des tests et gestion des anomalies</li>
                     </ul>
                 </div>
                 <!-----------SERVICE 1---------------------->
@@ -221,9 +221,10 @@
                 <div class="services__content">
                     <!-- <h3 class="services__title">Développement <br> frontend</h3> -->
                     <ul class="services__list grid">
+                        <li>Conception, exécution des tests et gestion des anomalies</li>
                         <li>Développement et maintenance des scripts de test</li>
                         <li>Reporting d’avancement des tests</li>
-                        <li>Tests de performance</li>
+                        <!-- <li>Tests de performance</li> -->
                     </ul>
                 </div>
                 <!-----------SERVICE 2---------------------->
@@ -1097,6 +1098,28 @@
                 <!------- FIN PORTFOLIO PROJET 1 -------->
 
 
+                <!------- DEBUT PORTFOLIO PROJET 1 ------>
+                <div class="portfolio__card">
+
+                    <a href="https://kayancodes.github.io/insolitediscovery/" class="portfolio__data">
+
+                        <p>FULL STACK</p>
+                        <div class="portfolio__bkg">
+                            <img src="assets/img/png__notes.png" alt="">
+                        </div>
+
+                        <div class="portfolio__content">
+
+                            <h3 class="portfolio__title">Notes</h3>
+                            <span class="portfolio__subtitle">Symfony, Twig, PHP, CRUD</br>Design UX UI
+                            </span>
+                        </div>
+                    </a>
+
+                </div>
+                <!------- FIN PORTFOLIO PROJET 1 -------->
+
+
 
                 <!------- DEBUT PORTFOLIO PROJET 1 ------>
                 <div class="portfolio__card">
@@ -1280,7 +1303,7 @@
             <h2 class="section__title">Contactez moi</h2>
             <span class="section__subtitle">Prenons contact</span>
 
-            <div class="contact__container container grid">
+            <div class="contact__container contact container grid">
                 <div>
                     <div class="contact__information">
 
@@ -1294,11 +1317,21 @@
                     </div>
                 </div>
 
-
                 <div class="contact__information">
                     <div>
                         <a href="mailto:yannickabasele@gmail.com" class="contact__title">
                             <h3>Par E-mail</h3>
+                        </a>
+                        <!-- <span class="contact__subtitle">Yannickabasele@gmail.com</span> -->
+                    </div>
+                </div>
+
+
+                <div class="contact__information">
+                    <div>
+                        <a href="https://www.linkedin.com/in/yannick-kabasele-675841201/" target="_blank"
+                            class="contact__title">
+                            <h3>Par LinkedIn</h3>
                         </a>
                         <!-- <span class="contact__subtitle">Yannickabasele@gmail.com</span> -->
                     </div>
