add lien projet Notes

--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
                 <!------- DEBUT PORTFOLIO PROJET 1 ------>
                 <div class="portfolio__card">
 
-                    <a href="https://kayancodes.github.io/insolitediscovery/" class="portfolio__data">
+                    <a href="https://kayancodes.github.io/projetnotes_presentation/" class="portfolio__data">
 
                         <p>FULL STACK</p>
                         <div class="portfolio__bkg">
