--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
                         <div class="portfolio__content">
 
                             <h3 class="portfolio__title">Notes</h3>
-                            <span class="portfolio__subtitle">Symfony, Twig, PHP, CRUD</br>Design UX UI
+                            <span class="portfolio__subtitle">Symfony, Twig, SQL, PHP, CRUD</br>Design UX UI
                             </span>
                         </div>
                     </a>
