--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
                         <li>Conception, exécution des tests et gestion des anomalies</li>
                         <li>Développement et maintenance des scripts de test</li>
                         <li>Reporting d’avancement des tests</li>
+                        <li>Test de performance</li>
                         <!-- <li>Tests de performance</li> -->
                     </ul>
                 </div>
