--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div> -->
 
                 <div class="home__info-img">
-                    <h1>Testeur Logiciel </br> Développeur Web</h1>
+                    <h1> Développeur Web </br> Testeur Logiciel</h1>
                     <h2 class="title_h2">Yannick Kabasele</h2>
                     <div>
                         <a href="#apropos" class="button">EN SAVOIR PLUS</a>
@@ -147,10 +147,10 @@
                     <div class="apropos__stats">
                         <h3 class="apropos__stats-title">Statistiques</h3>
                         <div class="apropos__stats-infos">
+                            <p>76 Intégrations Web</p>
+                            <p>05 Projets Dév Web</p>
                             <p>01 Projet Séquentiel V</p>
                             <p>01 Projet Agile</p>
-                            <p>05 Projets Dév Web</p>
-                            <p>76 Intégrations Web</p>
                             <!-- <p>2 ans d'expérience</p> -->
                         </div>
                     </div>
@@ -1079,29 +1079,6 @@
                 <!------- DEBUT PORTFOLIO PROJET 1 ------>
                 <div class="portfolio__card">
 
-
-                    <a href="https://kayancodes.github.io/projet_ca/" class="portfolio__data">
-
-                        <p class="toptop">TEST LOGICIEL</p>
-                        <div class="portfolio__bkg">
-
-                            <img src="assets/img/png__ca.png" alt="">
-                        </div>
-
-                        <div class="portfolio__content">
-                            <h3 class="portfolio__title">Crédit Auto</h3>
-                            <span class="portfolio__subtitle">Cycle Séquentiel V</br>Squash TM et Mantis BT
-                            </span>
-                        </div>
-                    </a>
-
-                </div>
-                <!------- FIN PORTFOLIO PROJET 1 -------->
-
-
-                <!------- DEBUT PORTFOLIO PROJET 1 ------>
-                <div class="portfolio__card">
-
                     <a href="https://kayancodes.github.io/projetnotes_presentation/" class="portfolio__data">
 
                         <p>FULL STACK</p>
@@ -1112,7 +1089,29 @@
                         <div class="portfolio__content">
 
                             <h3 class="portfolio__title">Notes</h3>
-                            <span class="portfolio__subtitle">Symfony, Twig, SQL, PHP, CRUD</br>Design UX UI
+                            <span class="portfolio__subtitle">Symfony, Twig, SQL, CRUD</br>Design UX UI
+                            </span>
+                        </div>
+                    </a>
+
+                </div>
+                <!------- FIN PORTFOLIO PROJET 1 -------->
+
+                <!------- DEBUT PORTFOLIO PROJET 1 ------>
+                <div class="portfolio__card">
+
+
+                    <a href="https://kayancodes.github.io/projet_ca/" class="portfolio__data">
+
+                        <p class="toptop">TEST FONCTIONNEL</p>
+                        <div class="portfolio__bkg">
+
+                            <img src="assets/img/png__ca.png" alt="">
+                        </div>
+
+                        <div class="portfolio__content">
+                            <h3 class="portfolio__title">Crédit Auto</h3>
+                            <span class="portfolio__subtitle">Cycle Séquentiel V</br>Squash TM et Mantis BT
                             </span>
                         </div>
                     </a>
