--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                 <div class="services__content">
                     <!-- <h3 class="services__title">Intégration <br> web</h3> -->
                     <ul class="services__list grid">
+                        <li>Intégration web</li>
                         <li>Conception et développement d'applications web et mobile</li>
                         <li>Etude et analyse des spécifications fonctionnelles</li>
                         <li>Participation à la réalisation du plan de test</li>
