--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="apropos__stats">
                         <h3 class="apropos__stats-title">Statistiques</h3>
                         <div class="apropos__stats-infos">
-                            <p>76 Intégrations Web</p>
+                            <p>81 Intégrations Web</p>
                             <p>05 Projets Dév Web</p>
                             <p>01 Projet Séquentiel V</p>
                             <p>01 Projet Agile</p>
@@ -1127,7 +1127,7 @@
 
                     <a href="https://kayancodes.github.io/insolitediscovery/" class="portfolio__data">
 
-                        <p>WORDPRESS</p>
+                        <p>CMS WORDPRESS</p>
                         <div class="portfolio__bkg">
                             <img src="assets/img/png__insolite.png" alt="">
                         </div>
@@ -1148,7 +1148,7 @@
 
                     <a href="https://kayancodes.github.io/ReseauBonaparte/" class="portfolio__data">
 
-                        <p>FRONT-END</p>
+                        <p>CMS</p>
                         <div class="portfolio__bkg">
                             <img src="assets/img/png__bonaparte.png" alt="">
                         </div>
