--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     </p>
 
                     <p class="apropos__description">
-                        À cet effet, j'ai réalisé la certification « Concepteur et Développeur d’Applications
-                        Web » et la licence « Concepteur Chef de Projet Web », en alternance.
+                        À cet effet, j'ai réalisé la licence « Concepteur et Développeur d’Applications
+                        Web » et la certification « Concepteur Chef de Projet Web », en alternance.
                     </p>
 
                     <p class="apropos__description">
