--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 
 
 
-                <!------- DEBUT PORTFOLIO PROJET 1 ------>
+                <!------- DEBUT PORTFOLIO PROJET 1 ------
                 <div class="portfolio__card">
 
                     <a href="" class="portfolio__data">
@@ -830,7 +830,7 @@
                         </a>
 
                 </div>
-                <!------- FIN PORTFOLIO PROJET 1 -------->
+                ----- FIN PORTFOLIO PROJET 1 -------->
 
 
 
@@ -860,7 +860,7 @@
 
 
 
-                <!------- DEBUT PORTFOLIO PROJET 6 ------>
+                <!------- DEBUT PORTFOLIO PROJET 6 ------
                 <div class="portfolio__card">
 
                     <a href="" class="portfolio__data">
@@ -885,11 +885,11 @@
                         </a>
 
                 </div>
-                <!------- FIN PORTFOLIO PROJET 6 -------->
+                ----- FIN PORTFOLIO PROJET 6 -------->
 
 
 
-                <!------- DEBUT PORTFOLIO PROJET 1 ------>
+                <!------- DEBUT PORTFOLIO PROJET 1 ------
                 <div class="portfolio__card">
 
                     <a href="" class="portfolio__data">
@@ -916,7 +916,7 @@
                         </a>
 
                 </div>
-                <!------- FIN PORTFOLIO PROJET 1 -------->
+                ---- FIN PORTFOLIO PROJET 1 -------->
 
 
 
