--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 
 
 
-                <!------- DEBUT PORTFOLIO PROJET 1 ------
+                <!------- DEBUT PORTFOLIO PROJET 1 ------>
                 <div class="portfolio__card">
 
                     <a href="" class="portfolio__data">
@@ -830,7 +830,7 @@
                         </a>
 
                 </div>
-                ----- FIN PORTFOLIO PROJET 1 -------->
+                <!----- FIN PORTFOLIO PROJET 1 -------->
 
 
 
