--- a/index.html
+++ b/index.html
@@ -824,8 +824,9 @@
                                 </div>
 
                                 <span class="portfolio__subtitle">Refonte du site web de tourisme et d’attractions
-                                    locales, Insolite Discovery. </br> Conception UX / UI et développement web via
-                                    Wordpress.</span>
+                                    locales, Insolite Discovery. </br> Conception UX / UI avec Excalidraw et Adobe XD et
+                                    développement web avec le
+                                    CMS Wordpress.</span>
                             </div>
                         </a>
 
