--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="apropos__stats">
                         <h3 class="apropos__stats-title">Statistiques</h3>
                         <div class="apropos__stats-infos">
-                            <p>81 Intégrations</p>
+                            <p>81 Intégrations web</p>
                             <p>06 UX UI Designer</p>
                             <p>05 Dév. Web</p>
                             <p>02 UX Research</p>
