--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h1> UX Designer </br> Product Owner</h1>
                     <h2 class="title_h2">Yannick Kabasele</h2>
                     <div>
-                        <a href="#realisations" class="button">EN SAVOIR PLUS</a>
+                        <a href="#realisations" class="button">Mes réalisations</a>
                     </div>
                 </div>
 
@@ -165,9 +165,9 @@
                     <div class="apropos__interets">
                         <h3 class="apropos__interets-title">Intérêts</h3>
                         <div class="apropos__interets-infos">
-                            <p>I.A</p>
-                            <p>Psychologie</p>
                             <p>Photographie</p>
+                            <p>Psychologie</p>
+                            <p>Intéligence Artificielle</p>
                             <p>Athlétisme</p>
                         </div>
                     </div>
