--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <p>Empathie</p>
                             <p>Écoute</p>
                             <p>Rigueur</p>
-                            <p>Pensé analytique</p>
+                            <p>Autonomie</p>
 
 
                         </div>
