--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
                     <p class="apropos__description">
                         Après un cursus initial dans le domaine de la <b>qualité en production industrielle</b>, j'ai
                         décidé de
-                        réorienter ma carrière professionnelle vers le domaine de la conception et du développement de
-                        site
-                        et d’applications web, domaine qui représente le parfait carrefour de tout ce qui me
+                        réorienter ma carrière professionnelle vers le domaine de la conception digitale, domaine qui
+                        représente le parfait carrefour de tout ce qui me
                         <b>passionne</b> : <br>
                         <b>Le comportement humain, le design, l’informatique et l'art.</b>
                     </p>
