--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p class="apropos__description">
                         Après un cursus initial dans le domaine de la <b>qualité en production industrielle</b>, j'ai
                         décidé de
-                        réorienter ma carrière professionnelle vers le domaine de la conception digitale, domaine qui
+                        réorienter ma carrière professionnelle vers le domaine de la conception digital, domaine qui
                         représente le parfait carrefour de tout ce qui me
                         <b>passionne</b> : <br>
                         <b>Le comportement humain, le design, l’informatique et l'art.</b>
