--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div> -->
 
                 <div class="home__info-img">
-                    <h1> UX Designer </br> Product Owner</h1>
+                    <h1> UX UI Designer</h1>
                     <h2 class="title_h2">Yannick Kabasele</h2>
                     <div>
                         <a href="#realisations" class="button">Mes réalisations</a>
