--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                         décidé de
                         réorienter ma carrière professionnelle vers le domaine de la conception digital, domaine qui
                         représente le parfait carrefour de tout ce qui me
-                        <b>passionne</b> : <br>
-                        <b>Le comportement humain, le design, l’informatique et l'art.</b>
+                        passionne : <br>
+                        <b>L'étude du comportement humain, les nouvelles technologies, le design, l’informatique et
+                            l'art.</b>
                     </p>
 
                     <!-- <p class="apropos__description">
@@ -150,12 +151,12 @@
                     </div>
 
                     <div class="apropos__valeurs">
-                        <h3 class="apropos__valeurs-title">Valeurs</h3>
+                        <h3 class="apropos__valeurs-title">Qualités</h3>
                         <div class="apropos__valeurs-infos">
                             <p>Empathie</p>
-                            <p>Écoute</p>
-                            <p>Rigueur</p>
                             <p>Autonomie</p>
+                            <p>Rigueur</p>
+                            <p>Capacité d'analyse</p>
 
 
                         </div>
